# Archon

./: .gitignore  MANIFEST.in  README.md  archon-loop.sh  install.sh  pyproject.toml
docs/: CHANGELOG.md  MIGRATION.md
src/archon/: ORCHESTRATOR_GUIDE.md  __init__.py  cli.py  log.py  runner.py  state.py  types.py
src/archon/.archon-src/scripts/: validate-review.py
src/archon/.archon-src/skills/.claude-plugin/: marketplace.json
src/archon/.archon-src/skills/lean4/: LICENSE  MIGRATION.md  README.md
src/archon/.archon-src/skills/lean4/.claude-plugin/: plugin.json
src/archon/.archon-src/skills/lean4/commands/: autoprove.md  (+10 more)
src/archon/.archon-src/tools/lean-lsp-mcp/: LICENSE  pyproject.toml
src/archon/.archon-src/tools/lean-lsp-mcp/src/lean_lsp_mcp/: server.py
src/archon/commands/: dashboard.py  doctor.py  init.py  loop.py  prove.py  setup.py  update.py
src/archon/ui/: .gitignore  package.json
src/archon/ui/client/: index.html  package-lock.json  package.json
src/archon/ui/client/src/: App.tsx  main.tsx
src/archon/ui/server/: package-lock.json  package.json
src/archon/ui/server/src/: index.ts  utils.ts
ui/: README.md  start.sh
ui/client/src/components/: DiffView.tsx  LeanCodeLine.tsx  LogEntryLine.tsx
ui/client/src/components/log-details/: JsonDetail.tsx  ThinkingDetail.tsx  ToolResultDetail.tsx  details.module.css  index.tsx
ui/client/src/hooks/: useDiffUrlState.ts
ui/client/src/utils/: diffStructure.ts  leanHighlight.ts  leanStructure.ts
ui/client/src/views/: DiffPlayback.module.css  DiffPlayback.tsx  LogViewer.module.css  LogViewer.tsx
(+50 files in other folders)
