[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "archon"
version = "0.1.0"
description = "Autonomous Lean 4 formalization system"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "pydantic",
]

[project.scripts]
archon = "archon.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["archon*"]

[tool.setuptools.package-data]
"archon" = [".archon-src/**/*",
            ".archon-src/**/.*",
            "ui/**/*"]